fixBug:autograder不支持removeFirst()，修改为remove(0)