@@ -171,7 +171,7 @@ public class Engine {
     public static List<Corridor> generateCorridors(List<Room> rooms) {
         List<Room> unconnectedRooms = new ArrayList<>(rooms);
         List<Corridor> corridors = new ArrayList<>();
-        Room currentRoom = unconnectedRooms.removeFirst(); // 选择第一个房间作为起始点
+        Room currentRoom = unconnectedRooms.remove(0); // 选择第一个房间作为起始点
 
         while (!unconnectedRooms.isEmpty()) {
             Room nextRoom = unconnectedRooms.get(rand.nextInt(unconnectedRooms.size())); //在剩下房间里随机选一个
